- Summary:Refact the code.
- Bugzilla Bug (s) Resolved:



- Description:



- Tests Description  :

Manual test

- Files Edited:



- Files Added:



- Files Deleted:



- Notes to Build Team:



- Notes to Developers:



- Notes to QA:



-          Notes to Documentation: